- homework title updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="user_name">Bára Čmelová</string>
     <string name="platform_android">Android</string>
     <string name="skills_headline">Skills</string>
-    <string name="home_works">Home works</string>
+    <string name="home_works">Homework</string>
     <string name="push">push</string>
     <string name="review">review</string>
     <string name="acceptance">acceptance</string>
