--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<resources>
 
     <!--titles-->
     <string name="app_name">EMA App</string>
@@ -39,5 +39,19 @@
     <string name="eight">8/10</string>
     <string name="nine">9/10</string>
     <string name="ten">10/10</string>
+
+    <!-- toolbar titles -->
+    <string name="item_all">All</string>
+    <string name="item_android" translatable="false">Android</string>
+    <string name="item_iOS" translatable="false">iOS</string>
+
+
+    <!-- ucastnici akademie - mock jmena -->
+    <string name="bara_cmelova" translatable="false">Bára Čmelová</string>
+    <string name="kevin_vojco" translatable="false">Kevin Vojco</string>
+    <string name="lucie_zvorilova" translatable="false">Lucie Zvořilová</string>
+    <string name="patrik_mokry" translatable="false">Patrik Mokrý</string>
+    <string name="pavel_stanek" translatable="false">Pavel Staněk</string>
+    <string name="lenka_veselá" translatable="false">Lenka Veselá</string>
 
 </resources>
