- recycler view implemented (however the widgets are not being displayed + contains menu filter)

--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -40,6 +40,6 @@
     <string name="ten">10/10</string>
 
     <!-- toolbar titles -->
-    <string name="item_all">Vše</string>
+    <string name="user_filter_all">Vše</string>
 
 </resources>
