fixed: onclick sending to a new activity (user profile)

--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -39,7 +39,16 @@
     <string name="nine">9/10</string>
     <string name="ten">10/10</string>
 
+
     <!-- toolbar titles -->
     <string name="user_filter_all">Vše</string>
+    <string name="user_list_title">Seznam účastníků</string>
+    <string name="user_profile_title">Profil účastníka</string>
+
+    <!-- navigation between fragments-->
+    <string name="first_fragment_label">První Fragment</string>
+    <string name="second_fragment_label">Druhý Fragment</string>
+    <string name="next">Další</string>
+    <string name="previous">Zpět</string>
 
 </resources>
