Most of the issues from feedback fixed = status before changing of the adapter.kt

--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -51,4 +51,7 @@
     <string name="next">Další</string>
     <string name="previous">Zpět</string>
 
+    <!-- Other -->
+    <string name="email_client">"Zvolte prohlížeč:"</string>
+
 </resources>
