--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
 
     <!--titles-->
     <string name="app_name">EMA App</string>
-    <string name="user_name">Bára Čmelová</string>
     <string name="platform_android">Android</string>
     <string name="skills_headline">Skills</string>
     <string name="home_works">Homework</string>
@@ -57,7 +56,11 @@
     <string name="ios_student" translatable="false">iosStudent</string>
 
     <!-- Errors -->
-    <string name="error_fetch_users">Please check your internet connection</string>
+    <string name="error_fetch_users">Oops, something went wrong! Please check your internet connection and try again.</string>
+    <string name="error_email"> User does not have an email address.</string>
+    <string name="error_linked_in"> User does not have a LinkedIn profile.</string>
+    <string name="error_slack"> User does not have a Slack profile. </string>
+    <string name="activity_not_found"> Oops! We did not find any suitable application on your device to open this link. </string>
 
     <!-- Other -->
     <string name="email_client">"Choose email client:"</string>
