fixed: - progress bar visibility (loading) UserProfileFragment.kt - progress bar visibility(loading) UserListFragment.kt - redundant files/lines deleted

--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -51,11 +51,11 @@
     <string name="previous">Zpět</string>
 
     <!-- Errors -->
-    <string name="error_fetch_users"> Oops, něco se pokazilo! Zkontrolujte, zda jste připojeni k intenetu a zkuste to znovu.</string>
+    <string name="error_fetch_users">Oops, něco se pokazilo.<br />Zkontrolujte, zda jste připojeni k intenetu a zkuste to znovu.</string>
     <string name="error_email"> Uživatel nemá emailovou adresu. </string>
     <string name="error_linked_in"> Uživatel nemá LinkedIn profil.</string>
     <string name="error_slack"> Uživatel nemá Slack profil.</string>
-    <string name="activity_not_found"> Oops! Vypadá to, že nemáte naistalovanou aplikaci pro otevření tohoto odkazu. </string>
+    <string name="activity_not_found">"Vypadá to, že nemáte naistalovanou aplikaci pro otevření tohoto odkazu. "</string>
 
     <!-- other -->
     <string name="email_client">"Zvolte prohlížeč:"</string>
