--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="user_icon">User icon</string>
     <string name="check_mark">Check_mark</string>
     <string name="clock">Clock</string>
+    <string name="error_image">Error</string>
 
     <!--progress titles-->
     <string name="zero">0/10</string>
@@ -56,7 +57,9 @@
     <string name="ios_student" translatable="false">iosStudent</string>
 
     <!-- Errors -->
-    <string name="error_fetch_users">Oops, something went wrong! <br /> Please check your internet connection and try again.</string>
+    <string name="error_title">Oops, something went wrong!</string>
+    <string name="error_connection">Please check your internet connection and try again.</string>
+    <string name="error_button">Retry</string>
     <string name="error_email"> User does not have an email address.</string>
     <string name="error_linked_in"> User does not have a LinkedIn profile.</string>
     <string name="error_slack"> User does not have a Slack profile. </string>
