--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,5 +76,9 @@
     <!-- Other -->
     <string name="email_client">"Choose email client:"</string>
     <string name="base_url" translatable="false">http://emarest.cz.mass-php-1.mit.etn.cz/api/</string>
-    <string name="mobile_academy_2021">Mobile Academy 2021</string>
+    <string name="mobile_academy_2021" translatable="false">Mobile Academy 2021</string>
+
+    <!-- Login -->
+    <string name="login_success">You were successfully logged in.</string>
+    <string name="wrong_credentials">Please enter a valid username and password.</string>
 </resources>
