- ViewBinding implemented in Activities and Fragments - TODO: ViewModels injection, token should be provided by Interceptor

--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -74,4 +74,9 @@
     <string name="etnetera_logo">Etnetera logo</string>
 
 
+    <!--edit profile -->
+    <string name="edit_skills">Upravit znalosti</string>
+    <string name="edit">Upravit</string>
+    <string name="submit">Uložit</string>
+
 </resources>
