--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="kotlin_skill">Kotlin skill</string>
     <string name="ios_skill">iOS skill</string>
     <string name="swift_skill">Swift skill</string>
+    <string name="no_rights_edit">You have no rights to edit this profile.</string>
 </resources>
