- Lanscape layouts for LoginActivity and UserListFragment added

--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -83,5 +83,6 @@
     <string name="ios_skill">iOS zkušenosti</string>
     <string name="kotlin_skill">Kotlin zkušenosti</string>
     <string name="android_skill">Android zkušenosti</string>
+    <string name="edit_skills_subtitle">Dejte nám vědět, co umíte!</string>
 
 </resources>
