--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,6 @@
     <string name="swift_skill">Swift skill</string>
     <string name="no_rights_edit">You have no rights to edit this profile.</string>
     <string name="edit_skills_subtitle">You can edit your skills here.</string>
+    <string name="skills_change_success">Skills were successfully changed.</string>
+    <string name="arrow">arrow</string>
 </resources>
